Fixed mobile menu wrap

--- a/art/night/style.css
+++ b/art/night/style.css
@@ -127,6 +127,9 @@ main{
 	margin:auto;
 	padding:0px 1%;
 	width:fit-content;
+	display:flex;
+	-webkit-flex-flow:row wrap;
+	justify-content:space-around;
 }
 .workmap a{
 	font-family:square;
